# game-contract-sdk

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  code-format.sh
cicd/: build.sh  pack.sh  run  test.sh
cmake/: utils.cmake
examples/: CMakeLists.txt  README.md
examples/dice/: CMakeLists.txt
examples/dice/contracts/include/dice/: dice.hpp
examples/guess_number/: CMakeLists.txt
examples/guess_number/contracts/: CMakeLists.txt
examples/guess_number/contracts/include/guess_number/: guess_number.hpp
examples/guess_number/contracts/src/: guess_number.cpp
examples/guess_number/tests/: CMakeLists.txt  contracts.hpp.in  guess_number_tests.cpp
examples/multi_stub/: CMakeLists.txt
examples/multi_stub/contracts/: CMakeLists.txt
examples/multi_stub/contracts/include/multi_stub/: multi_stub.hpp
examples/multi_stub/contracts/src/: multi_stub.cpp
examples/multi_stub/tests/: CMakeLists.txt  contracts.hpp.in  multi_stub_tests.cpp
examples/odd_or_even/: CMakeLists.txt
examples/odd_or_even/contracts/: CMakeLists.txt
examples/odd_or_even/contracts/include/odd_or_even/: odd_or_even.hpp
examples/odd_or_even/contracts/src/: odd_or_even.cpp
examples/odd_or_even/tests/: CMakeLists.txt  contracts.hpp.in  odd_or_even_tests.cpp
examples/proto_dice/: CMakeLists.txt
examples/proto_dice/contracts/: CMakeLists.txt
examples/proto_dice/contracts/include/proto_dice/: proto_dice.hpp
examples/proto_dice/contracts/src/: proto_dice.cpp
examples/proto_dice/tests/: CMakeLists.txt  contracts.hpp.in  proto_dice_tests.cpp
examples/simple/: CMakeLists.txt
examples/simple/contracts/: CMakeLists.txt
examples/simple/contracts/include/simple/: simple.hpp
examples/simple/contracts/src/: simple.cpp
examples/simple/src/: simple.cpp
examples/simple/tests/: CMakeLists.txt  contracts.hpp.in  simple_tests.cpp
examples/stub/: CMakeLists.txt
examples/stub/contracts/: CMakeLists.txt
examples/stub/contracts/include/stub/: stub.hpp
examples/stub/contracts/src/: stub.cpp
examples/stub/tests/: CMakeLists.txt  contracts.hpp.in  stub_tests.cpp
examples/win_raise_lose/: CMakeLists.txt
examples/win_raise_lose/contracts/: CMakeLists.txt
examples/win_raise_lose/contracts/include/win_raise_lose/: win_raise_lose.hpp
examples/win_raise_lose/contracts/src/: win_raise_lose.cpp
examples/win_raise_lose/tests/: CMakeLists.txt  contracts.hpp.in  win_raise_lose_tests.cpp
sdk/: CMakeLists.txt  game.abi
sdk/files/: debug.abi  game.abi  game_started.abi  signidice_part_2_request.abi
sdk/files/events/: action_request.abi  game_failed.abi  game_finished.abi  game_message.abi  game_started.abi  signidice_part_2_request.abi
sdk/include/game-contract-sdk/: dispatcher.hpp  game_base.hpp  rsa.hpp  service.hpp
sdk/libs/: CMakeLists.txt
sdk/scripts/: abi-merger.py  gen_abi.sh
tester/: CMakeLists.txt
tester/include/game_tester/: contracts.hpp.in  game_tester.hpp  random_mock.hpp  strategy.hpp  test_symbol.hpp
